        registered for a sequence of request methods and a configurable list
        of mimetypes.  To register multiple publishers for the same request
        method and the same mimetype (e.g. POST+text/xml: SOAP, XMLRPC)
        publishers can be prioritized and publishers can introspect the request
        environment to decide if they can handle a request or not.

    Restructuring

      - Mutable MessageIDs have been deprecated and will be removed in
        Zope 3.3.  From now on, please use

          zope.i18nmessageid.Message{Factory}

        instead of

          zope.i18nmessageid.MessageID{Factory}

        and

          zope.app.i18n.ZopeMessageFactory

        instead of

          zope.app.i18n.ZopeMessageIDFactory

        Zope itself now uses immutable messages everywhere.

        See zope/i18nmessageid/messages.txt for more information.


    Bug Fixes

      - Fixed bug 396, http://www.zope.org/Collectors/Zope3-dev/396.
        When doing multi-adapter lookups, the interface of the first
        object wan't given adequate weight.

      - Fix: OnlineHelp source files and textual resources now
        use UTF-8 as default encoding.

      - Fixed issue #455: tal:content="" does not get translated
        by i18n:translate=""

      - Fixed issue #390: Deprecated ``IBaseRequest.body`` and
        ``IBaseRequest.bodyFile``. The latter was simply renamed to
        ``IBaseRequest.bodyStream``. No code assumes anymore that the input
        streams are seekable.

      - Fixed issue #450: ignore python level CookieError and report them
        to the log file.

      - Fixed issue #445: gadflyDA not full implementation

      - Fix: Pagelet directive was ignoring the permission. Pagelets which
        not the right permission are not shown if calling via the Tales
        expression ``pagelets:``. If calling named pagelets directly via the
        Tales expression ``pagelet:`` we raise a Unauthorized exception if